--- a/accelsensordatarecording/Info.plist
+++ b/accelsensordatarecording/Info.plist
@@ -2,21 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CFBundleDisplayName</key>
-    <string>Pothole Memos</string>
-    <key>CFBundleIdentifier</key>
-    <string>com.example.accelsensordatarecording</string>
-    <key>CFBundleName</key>
-    <string>accelsensordatarecording</string>
-    <key>CFBundleVersion</key>
-    <string>1</string>
-    <key>CFBundleShortVersionString</key>
-    <string>1.0</string>
-    <key>UILaunchScreen</key>
-    <dict/>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>We record your GPS location alongside motion data to map potholes.</string>
-    <key>NSMotionUsageDescription</key>
-    <string>We record device motion to detect pothole impacts.</string>
+	<key>CFBundleDisplayName</key>
+	<string>accelsensordatarecording</string>
+	<key>CFBundleExecutable</key>
+	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.example.accelsensordatarecording</string>
+	<key>CFBundleName</key>
+	<string>accelsensordatarecording</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>CFBundleVersion</key>
+	<string>1</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We record your GPS location alongside motion data to map potholes.</string>
+	<key>NSMotionUsageDescription</key>
+	<string>We record device motion to detect pothole impacts.</string>
+	<key>UILaunchScreen</key>
+	<dict/>
 </dict>
 </plist>
